--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.3.5",
-    "cookie-session": "*",
-    "debug": "~2.2.0",
+    "cookie-session": "^1.3.3",
+    "debug": "^4.1.1",
     "ejs": "~2.3.3",
-    "express": "~4.13.1",
+    "express": "^4.16.4",
     "express-partials": "*",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.16.0",
-    "request": "*",
-    "serve-favicon": "~2.3.0",
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
     "underscore": "^1.9.1"
   }
 }
